feat: Upgrade to Java 21
- Update project to use Java 21
- Update maven dependencies and plugins for Java 21 compatibility
- Update github actions to use Java 21